@@ -166,7 +166,7 @@ static int AU_open(Sound_Sample *sample, const char *ext)
 {
     Sound_SampleInternal *internal = sample->opaque;
     SDL_RWops *rw = internal->rw;
-    int skip, hsize, i;
+    int skip, hsize, i, bytes_per_second;
     struct au_file_hdr hdr;
     struct audec *dec;
     char c;
@@ -242,7 +242,14 @@ static int AU_open(Sound_Sample *sample, const char *ext)
     {
         free(dec);
         BAIL_MACRO("AU: Not an .AU stream.", 0);
-    } /* else */
+    } /* else */    
+
+    bytes_per_second = ( ( dec->encoding == AU_ENC_LINEAR_16 ) ? 2 : 1 )
+        * sample->actual.rate * sample->actual.channels ;
+    sample->total_time = ((dec->remaining == -1) ? (-1) :
+			  ( ( dec->remaining / bytes_per_second ) * 1000 ) +
+			  ( ( dec->remaining % bytes_per_second ) * 1000 /
+                          bytes_per_second ) );
 
     sample->flags = SOUND_SAMPLEFLAG_CANSEEK;
     dec->total = dec->remaining;
